# bouncing-balls

./: .gitignore  README.md  pyproject.toml
src/inner_circle/: __init__.py  main.py
