[project]
name = "inner-circle"
version = "0.1.0"
description = ""
authors = [
    {name = "Lionel H",email = "me@nullbyte.be"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
]

[tool.poetry]
packages = [{include = "inner_circle", from = "src"}]

[tool.poetry.scripts]
inner-circle = "inner_circle"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
